--- a/scss/components/button.scss
+++ b/scss/components/button.scss
@@ -76,13 +76,13 @@
       transition-property: color, background-color;
       transition-duration: $transitionDuration;
       transition-timing-function: $transitionTimingFunction;
-    }
-    &-filter:focus,
-    &-filter:hover {
-      color: $colorThird;
-      background-color: $colorSecondary;
-      box-shadow: 0 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
+      &:focus,
+      &:hover {
+        color: $colorThird;
+        background-color: $colorSecondary;
+        box-shadow: 0 3px 1px rgba(0, 0, 0, 0.1),
+          0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+      }
     }
   }
 }
