--- a/scss/components/modal.scss
+++ b/scss/components/modal.scss
@@ -22,7 +22,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 10px;
-    padding: 12px 40px 20px 40px;
+    padding: 0 40px 40px 40px;
     &-input {
       display: flex;
       border: 1px solid rgba(33, 33, 33, 0.2);
@@ -42,7 +42,7 @@
       }
     }
 
-    span {
+    label span {
       display: flex;
       font-size: 12px;
       line-height: $lineHeightTitle;
